crates/mold_parser/src/snapshots/mold_parser__tests__cte_data_modifying_insert.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..93
  SELECT_STMT@0..93
    WITH_CLAUSE@0..71
      WITH_KW@0..4 "WITH"
      WHITESPACE@4..5 " "
      CTE@5..71
        IDENT@5..13 "inserted"
        WHITESPACE@13..14 " "
        AS_KW@14..16 "AS"
        WHITESPACE@16..17 " "
        L_PAREN@17..18 "("
        INSERT_STMT@18..69
          INSERT_KW@18..24 "INSERT"
          WHITESPACE@24..25 " "
          INTO_KW@25..29 "INTO"
          WHITESPACE@29..30 " "
          TABLE_REF@30..35
            IDENT@30..34 "logs"
            WHITESPACE@34..35 " "
          INSERT_COLUMNS@35..41
            L_PAREN@35..36 "("
            IDENT@36..39 "msg"
            R_PAREN@39..40 ")"
            WHITESPACE@40..41 " "
          VALUES_CLAUSE@41..57
            VALUES_KW@41..47 "VALUES"
            WHITESPACE@47..48 " "
            VALUES_ROW@48..57
              L_PAREN@48..49 "("
              LITERAL@49..55
                STRING@49..55 "'test'"
              R_PAREN@55..56 ")"
              WHITESPACE@56..57 " "
          RETURNING_CLAUSE@57..69
            RETURNING_KW@57..66 "RETURNING"
            WHITESPACE@66..67 " "
            COLUMN_REF@67..69
              IDENT@67..69 "id"
        R_PAREN@69..70 ")"
        WHITESPACE@70..71 " "
    SELECT_KW@71..77 "SELECT"
    WHITESPACE@77..78 " "
    SELECT_ITEM_LIST@78..80
      SELECT_ITEM@78..80
        STAR_EXPR@78..80
          STAR@78..79 "*"
          WHITESPACE@79..80 " "
    FROM_CLAUSE@80..93
      FROM_KW@80..84 "FROM"
      WHITESPACE@84..85 " "
      TABLE_REF@85..93
        IDENT@85..93 "inserted"
